#pragma once

#include <memory>
#include <string>
#include <vector>

#include "../utils/Types.hpp"
#include "Entity.hpp"

class Monster : public Entity {
public:
  Monster(const std::string &rName, int maxHp, int atk, int def,
          MonsterCategory category, int mercyGoal,
          const std::vector<std::string> &rActIds);
  virtual ~Monster() = default;

  MonsterCategory getCategory() const;
  int getMercy() const;
  int getMercyGoal() const;
  const std::vector<std::string> &getActIds() const;
  virtual int getAllowedActCount() const = 0;
  virtual std::unique_ptr<Monster> clone() const = 0;

  void setMercy(int value);

private:
  MonsterCategory mCategory;
  int mMercy;
  int mMercyGoal;
  std::vector<std::string> mActIds;
};
