#pragma once

class RandomService {
public:
  int rollDamage(int atk, int def) const;
};
