@startuml ALTERDUNE

skinparam classAttributeIconSize 0

' Enums
enum MonsterCategory {
  NORMAL
  MINIBOSS
  BOSS
}

enum ItemType {
  HEAL
}

enum CombatResult {
  KILLED
  SPARED
  PLAYER_DEFEATED
}

' Entities
abstract class Entity {
  -mName: std::string
  -mHp: int
  -mMaxHp: int
  -mAtk: int
  -mDef: int
  +Entity(rName: const std::string&, maxHp: int, atk: int, def: int)
  +getName(): const std::string&
  +getHp(): int
  +getMaxHp(): int
  +getAtk(): int
  +getDef(): int
  #setHp(value: int): void
  +isAlive(): bool
  +takeDamage(amount: int): void
}

class Player extends Entity {
  -mKills: int
  -mSpares: int
  -mVictories: int
  -mInventory: Inventory
  +Player(rName: const std::string&, maxHp: int, atk: int, def: int)
  +getKills(): int
  +getSpares(): int
  +getVictories(): int
  +addKill(): void
  +addSpare(): void
  +addVictory(): void
  +heal(amount: int): void
  +getInventory(): Inventory&
}

abstract class Monster extends Entity {
  -mCategory: MonsterCategory
  -mMercy: int
  -mMercyGoal: int
  -mActIds: std::vector<std::string>
  +Monster(rName: const std::string&, maxHp: int, atk: int, def: int, category: MonsterCategory, mercyGoal: int, rActIds: const std::vector<std::string>&)
  +getCategory(): MonsterCategory
  +getMercy(): int
  +getMercyGoal(): int
  +getActIds(): const std::vector<std::string>&
  +getAllowedActCount(): int
  +clone(): std::unique_ptr<Monster>
  +setMercy(value: int): void
}

class NormalMonster extends Monster {
  +NormalMonster(rName: const std::string&, maxHp: int, atk: int, def: int, mercyGoal: int, rActIds: const std::vector<std::string>&)
  +getAllowedActCount(): int
  +clone(): std::unique_ptr<Monster>
}

class MiniBossMonster extends Monster {
  +MiniBossMonster(rName: const std::string&, maxHp: int, atk: int, def: int, mercyGoal: int, rActIds: const std::vector<std::string>&)
  +getAllowedActCount(): int
  +clone(): std::unique_ptr<Monster>
}

class BossMonster extends Monster {
  +BossMonster(rName: const std::string&, maxHp: int, atk: int, def: int, mercyGoal: int, rActIds: const std::vector<std::string>&)
  +getAllowedActCount(): int
  +clone(): std::unique_ptr<Monster>
}

class Item {
  -mName: std::string
  -mType: ItemType
  -mValue: int
  +Item()
  +Item(rName: const std::string&, type: ItemType, value: int)
  +getName(): const std::string&
  +getType(): ItemType
  +getValue(): int
  +apply(rTarget: Player&): void
}

class Inventory {
  -mItems: std::map<std::string, int>
  -mItemDefs: std::map<std::string, Item>
  +getQuantity(rName: const std::string&): int
  +add(rItem: const Item&, qty: int): void
  +use(rName: const std::string&, rTarget: Player&): bool
  +listItems(): std::vector<Item>
}

class ActAction {
  -mId: std::string
  -mText: std::string
  -mMercyDelta: int
  +ActAction()
  +ActAction(rId: const std::string&, rText: const std::string&, mercyDelta: int)
  +getId(): const std::string&
  +getText(): const std::string&
  +getMercyDelta(): int
}

class ActCatalog {
  -mActions: std::map<std::string, ActAction>
  +add(rAction: const ActAction&): void
  +has(rId: const std::string&): bool
  +get(rId: const std::string&): const ActAction&
  +list(): std::vector<ActAction>
}

class BestiaryEntry {
  -mMonsterName: std::string
  -mCategory: MonsterCategory
  -mMaxHp: int
  -mAtk: int
  -mDef: int
  -mResult: CombatResult
  +BestiaryEntry(rMonsterName: const std::string&, category: MonsterCategory, maxHp: int, atk: int, def: int, result: CombatResult)
  +getMonsterName(): const std::string&
  +getCategory(): MonsterCategory
  +getMaxHp(): int
  +getAtk(): int
  +getDef(): int
  +getResult(): CombatResult
}

class Bestiary {
  -mEntries: std::vector<BestiaryEntry>
  +add(rEntry: const BestiaryEntry&): void
  +list(): const std::vector<BestiaryEntry>&
}

' Systems
class Combat {
  -mRPlayer: Player&
  -mRMonster: Monster&
  -mRCatalog: const ActCatalog&
  -mRandomService: RandomService
  +Combat(rPlayer: Player&, rMonster: Monster&, rCatalog: const ActCatalog&)
  +start(): CombatResult
  +playerFight(): void
  +playerAct(rActId: const std::string&): void
  +playerItem(rItemName: const std::string&): void
  +playerMercy(): bool
  +monsterTurn(): void
}

class Game {
  -mPlayer: Player
  -mBestiary: Bestiary
  -mCatalog: ActCatalog
  -mMonsters: std::vector<std::unique_ptr<Monster>>
  -mIsGameOver: bool
  +Game(player: Player)
  +run(): void
  +showStartupSummary(): void
  +mainMenu(): void
  +startCombat(): bool
  +showStats(): void
  +showItems(): void
  +showBestiary(): void
  +checkEndings(): void
  +getPlayer(): Player&
  +getBestiary(): Bestiary&
  +getCatalog(): ActCatalog&
  +getMonsters(): std::vector<std::unique_ptr<Monster>>&
}

class RandomService {
  +rollDamage(maxHp: int): int
}

class CsvLoader {
  +loadItems(rPath: const std::string&): Inventory
  +loadMonsters(rPath: const std::string&, rCatalog: const ActCatalog&): std::vector<std::unique_ptr<Monster>>
}

' Relationships
Player *-- Inventory
Inventory *-- Item
ActCatalog o-- ActAction
Bestiary *-- BestiaryEntry

Game *-- Player
Game *-- Bestiary
Game *-- ActCatalog
Game *-- "0..*" Monster
Game ..> Combat

Combat --> Player
Combat --> Monster
Combat --> ActCatalog
Combat *-- RandomService

Item ..> ItemType
Monster ..> MonsterCategory
BestiaryEntry ..> MonsterCategory
BestiaryEntry ..> CombatResult
CsvLoader ..> Inventory
CsvLoader ..> Monster
CsvLoader ..> ActCatalog

@enduml
